pseudo-0ex02 & 1ex01 + 1ex02

--- a/module_00/ex02/Makefile
+++ b/module_00/ex02/Makefile
@@ -1,11 +1,11 @@
 
-NAME = horde
+NAME = account
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
 RM = rm -f
 
-SRCS = main.cpp Zombie.cpp zombieHorde.cpp
+SRCS = Account.cpp test.cpp
 OBJ_DIR = objects
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
