--- a/module_01/ex02/Makefile
+++ b/module_01/ex02/Makefile
@@ -1,11 +1,11 @@
 
-NAME = 
+NAME = info
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
 RM = rm -f
 
-SRCS =  
+SRCS = main.cpp
 OBJ_DIR = objects
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
