--- a/module_02/ex01/Makefile
+++ b/module_02/ex01/Makefile
@@ -1,11 +1,11 @@
 
-NAME = 
+NAME = fixed
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
 RM = rm -f
 
-SRCS = 
+SRCS = main.cpp Fixed.cpp
 OBJ_DIR = objects
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
