--- a/CPP-Module_01/ex04/Makefile
+++ b/CPP-Module_01/ex04/Makefile
@@ -11,8 +11,8 @@ OBJ_DIR = objects
 SRCS = main.cpp
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
-CYAN = \001\033[36m\002
-RESET = \001\033[0m\002
+CYAN = \033[36m
+RESET = \033[0m
 
 all: $(NAME)
 
