--- a/CPP-Module_03/ex03/Makefile
+++ b/CPP-Module_03/ex03/Makefile
@@ -1,5 +1,5 @@
 
-NAME = diamondtrap
+NAME = diamondTrap
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
@@ -12,8 +12,8 @@ INC_DIR = include
 SRCS = ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp main.cpp
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
-CYAN = \001\033[36m\002
-RESET = \001\033[0m\002
+CYAN = \033[36m
+RESET = \033[0m
 
 all: $(NAME)
 
