--- a/CPP-Module_04/ex01/Makefile
+++ b/CPP-Module_04/ex01/Makefile
@@ -1,5 +1,5 @@
 
-NAME = info
+NAME = 
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
@@ -7,8 +7,9 @@ RM = rm -f
 
 SRC_DIR = src
 OBJ_DIR = objects
+INC_DIR = include
 
-SRCS = main.cpp
+SRCS = 
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
 CYAN = \033[36m
@@ -19,15 +20,15 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 	@printf "\n"
-	@printf "$(CYAN)            ___ ___        ___    _____    _     _      ___ ___   \n$(RESET)"
-	@printf "$(CYAN) ___ _ _   |   |_  |   ___|  _|  |    _| _| |_ _| |_   |   |_  |  \n$(RESET)"
-	@printf "$(CYAN)| -_|_'_|  | | |  _|  | . |  _|  |   |_ |_   _|_   _|  | | |_| |_ \n$(RESET)"
-	@printf "$(CYAN)|___|_,_|  |___|___|  |___|_|    |_____|  |_|   |_|    |___|_____|\n$(RESET)"
+	@printf "$(CYAN)            ___ ___          ___    _____    _     _      ___ ___ \n$(RESET)"
+	@printf "$(CYAN) ___ _ _   |   |_  |     ___|  _|  |    _| _| |_ _| |_   |   | | |\n$(RESET)"
+	@printf "$(CYAN)| -_|_'_|  | | |_| |_   | . |  _|  |   |_ |_   _|_   _|  | | |_  |\n$(RESET)"
+	@printf "$(CYAN)|___|_,_|  |___|_____|  |___|_|    |_____|  |_|   |_|    |___| |_|\n$(RESET)"
 	@printf "$(CYAN)                                                                  \n$(RESET)"
 	@printf "\n"
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -I$(INC_DIR) -c $< -o $@
 
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
