--- a/CPP-Module_07/ex02/Makefile
+++ b/CPP-Module_07/ex02/Makefile
@@ -1,5 +1,5 @@
 
-NAME = 
+NAME = array
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 CXX = c++
@@ -9,17 +9,23 @@ SRC_DIR = src
 OBJ_DIR = objects
 INC_DIR = include
 
-SRCS = 
+SRCS = main.cpp
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 
-CYAN = \033[36m
+GREEN = \033[32m
 RESET = \033[0m
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
-
+	@printf "\n"
+	@printf "$(GREEN)            ___ ___        ___    _____    _     _      ___ ___ \n$(RESET)"
+	@printf "$(GREEN) ___ _ _   |   |_  |   ___|  _|  |    _| _| |_ _| |_   |   |   |\n$(RESET)"
+	@printf "$(GREEN)| -_|_'_|  | | |  _|  | . |  _|  |   |_ |_   _|_   _|  | | |   |\n$(RESET)"
+	@printf "$(GREEN)|___|_,_|  |___|___|  |___|_|    |_____|  |_|   |_|    |___|___|\n$(RESET)"
+	@printf "$(GREEN)                                                                \n$(RESET)"
+	@printf "\n"
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
 	$(CXX) $(CXXFLAGS) -I$(INC_DIR) -c $< -o $@
