--- a/CPP-Module_09/ex00/Makefile
+++ b/CPP-Module_09/ex00/Makefile
@@ -21,7 +21,7 @@ $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 	@printf "\n"
 	@printf "$(CYAN)            ___ ___        ___    _____    _     _      ___ ___ \n$(RESET)"
-	@printf "$(CYAN) ___ _ _   |   |   |   ___|  _|  |    _| _| |_ _| |_   |   |  _|\n$(RESET)"
+	@printf "$(CYAN) ___ _ _   |   |   |   ___|  _|  |    _| _| |_ _| |_   |   | . |\n$(RESET)"
 	@printf "$(CYAN)| -_|_'_|  | | | | |  | . |  _|  |   |_ |_   _|_   _|  | | |_  |\n$(RESET)"
 	@printf "$(CYAN)|___|_,_|  |___|___|  |___|_|    |_____|  |_|   |_|    |___|___|\n$(RESET)"
 	@printf "$(CYAN)                                                                \n$(RESET)"
